[package]
name = "dcimv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
inotify = { version = "0.10.2", default-features = false }
log = "0.4"
pretty_env_logger = { git = "https://github.com/karin0/pretty-env-logger.git" }
