[package]
name = "dcimv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[profile.test]
inherits = "release"
lto = false

[profile.debuginfo]
inherits = "release"
debug = true
strip = false

[dependencies]
inotify = { version = "0.11.0", default-features = false }
log = "0.4"
pretty_env_logger = { git = "https://github.com/karin0/pretty-env-logger.git" }
